--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -8,5 +8,22 @@ user.email=Почта
 user.roles=Роли
 user.active=Активный
 user.registered=Зарегистрирован
-meal.title=Моя еда
+
+meal.title=Mоя еда
+meal.filter=Фильтровать
+meal.from_date=Начальная дата
+meal.to_date=Конечная дата
+meal.from_time=От времени
+meal.to_time=До времени (исключая)
+meal.date=Дата
+meal.date_time=Дата и время
+meal.description=Описание
+meal.calories=Калории
+meal.create_meal=Создание еды
+meal.edit_meal=Редактирование еды
+
 common.select=Выбрать
+common.add=Добавить
+common.update=Редактировать
+common.delete=Удалить
+common.save=Сохранить
