Do HW 10 3 (excluding 3.3)

--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -20,6 +20,7 @@ user.active=Активный
 user.registered=Зарегистрирован
 user.password=Пароль
 user.caloriesPerDay=Норма калорий в день
+user.duplicatedEmail=Пользователь с такой почтой уже существует!
 
 meal.title=Моя еда
 meal.edit=Редактировать еду
